--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- font styling -->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
     <title>Typing Test</title>
 </head>
     <body>
